mucgpt-frontend/src/components/DiscoveryCard/DiscoveryCard.module.css
.card {
    border-radius: 8px;
    min-height: 140px;
    border: 2px solid transparent;
    transition: all 0.2s ease;
    background-color: var(--colorNeutralBackground1);
}

.cardSelected {
    border-color: var(--primary) !important;
}

.card:hover {
    box-shadow: var(--shadow8);
    background-color: var(--colorNeutralBackground1) !important;
    border-color: var(--primary) !important;
}

.card:hover .headerText {
    color: var(--primary);
}

.headerText {
    font-weight: var(--fontWeightSemibold);
    font-size: var(--fontSizeBase400);
    color: var(--colorNeutralForeground1);
    transition-property: color;
    transition-duration: 0.2s;
    overflow: hidden;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 2;
    overflow-wrap: break-word;
}

.headerRow {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
}

.description {
    font-size: var(--fontSizeBase200);
    color: var(--colorNeutralForeground2);
    overflow: hidden;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 2;
    overflow-wrap: break-word;
    padding: 0 12px 0;
}

